# fava-lazy-beancount

./: .gitignore  Makefile  README.md  pyproject.toml
frontend/: eslint.config.mjs  package-lock.json  package.json  tsconfig.json
frontend/src/: app.tsx  extension.ts  theme.tsx
frontend/src/api/: accounts.ts  api.ts  create_account.ts  missing_accounts.ts  plugins.ts
frontend/src/components/: AccountsTab.tsx  MissingAccountsTab.tsx  NewAccountField.tsx  PluginsTab.tsx
frontend/src/utils/: accountAutocomplete.ts
src/fava_lazy_beancount/: FavaLazyBeancount.js  __init__.py
src/fava_lazy_beancount/templates/: FavaLazyBeancount.html
